## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = pjdate

pjdate_SOURCES = \
	pjdate.h \
	pjdate.c \
	helper.h \
	helper.c \
	funcs.h \
	funcs.c \
	about.h \
	about.c \
	main.c

pjdate_LDFLAGS = 

pjdate_LDADD = 

